Agregado de un HREF

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#" class="logo">Cande Massa</a>
       <ul class="navlist">
         <li><a href="">Home</a></li>
-        <li><a href="">Canciones</a></li>
+        <li><a href="https://youtube.com/playlist?list=PLIAgbRVkm6iOQ0MejeSYsbjrtp3glCmHt" target="_blank">Canciones</a></li>
         <li><a href="https://www.tiktok.com/@candemassaok" target="_blank">TikTok</a></li>
         <li><a href="https://youtube.com/@candemassamusic3539" target="_blank">YouTube</a></li>
       </ul>
